William final commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#Home">Home</a>
             <a href="#About Us">About us</a>
             <a href="#Our Projects">Our Projects</a>
-            <a href="">Contact us</a>
+            <a href="#Contact Us">Contact us</a>
         </div>
       </div>
       <section class="hero-banner">
@@ -29,12 +29,12 @@
     </div>
     </section>
 </div> 
-<br><br><br><br>
+<br>
   
 
 <body>
 <section id="About Us">
-<h1>About Us &nbsp;&nbsp;<img src="images/background.png" alt="logo"></h1>
+<h1>About Us</h1>
 <p>We are a non profit organization that aims to provide a loving and caring home for every child in need.<br>
    We have taken in countless children from all over the country to try<br>
    and give them a better life and increase their chances to create a better<br>
@@ -44,12 +44,48 @@
    </section>
    <br><br><br><br>
   <section id="Our Projects"> 
-   <h1>Our Projects &nbsp;&nbsp;<img src="images/background.png" alt="logo"></h1>
+   <h1>Our Projects</h1>
    <h3>Mothers Day Fundraiser<br><br>
     <div class="scroll-container">
         <img src="images/mdcake.png">
     </div>
-   </section>
+    <h3>Visits to the Doc<br><br>
+        <div class="scroll-container">
+            <img src="images/Doctorsvisit.jpg">
+        </div>
+        <h3>Easter Egg Hunt<br><br>
+            <div class="scroll-container">
+                <img src="images/egghunt.png">
+            </div>
+            <h3>Monster Truck Fun<br><br>
+                <div class="scroll-container">
+                    <img src="images/mtfun.png">
+                </div>
+                <h3>Winter Clothing collections<br><br>
+                    <div class="scroll-container">
+                        <img src="images/winter.png">
+                    </div>
+                </section> 
+
+          <section id="Contact Us">
+            <h1>Contact Us</h1>
+            <p>Tel : 013 656 6428<br>
+               Email :tammy@newlifekids.org<br>
+               Address : Mandela Rd, Emalahleni, South Africa</p>         
+       </section>
+       <br><br><br>
 </body>
+<footer>
+    <div class="social-media-links">
+        <a href="https://www.facebook.com/NLChildrensHome" target="_blank">
+          <img src="images/facebook.png" alt="Facebook">
+        </a>&nbsp;
+        <a href="https://www.instagram.com/newlifekidswtb/" target="_blank">
+            <img src="images/instagram.png" alt="Instagram">
+          </a>
+</div>
+    
+  </footer>
+  
 
 </html>
